[package]
name = "native"
description = "Provide a native implementation bridge for wasm executor"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
zksync-era-verifier = { git = "https://github.com/HorizenLabs/zksync-era-verifier.git", tag = "v0.1.0", optional = true }
zksync-era-verifier-deserialize = { git = "https://github.com/HorizenLabs/zksync-era-verifier.git", tag = "v0.1.0", optional = true }
risc0-verifier = { git = "https://github.com/HorizenLabs/risc0-verifier.git", tag = "v0.1.0", optional = true }
ultraplonk_verifier = { git = "https://github.com/HorizenLabs/ultraplonk_verifier.git", tag = "v0.1.0", optional = true }
sp-runtime-interface = { workspace = true }
codec = { workspace = true }
log = "0.4.11"
hp-verifiers = { workspace = true }

[build-dependencies]
native-cache = { workspace = true, features = ["ultraplonk"] }

[features]
default = ["std"]
std = [
    "sp-runtime-interface/std",
    "codec/std",
    "hp-verifiers/std",
    "dep:zksync-era-verifier",
    "dep:zksync-era-verifier-deserialize",
    "dep:risc0-verifier",
    "dep:ultraplonk_verifier",
]
