[package]
name = "native"
description = "Provide a native implementation bridge for wasm executor"
version = "0.3.0"
license = "Apache-2.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
ark-bn254 = { version = "0.4.0", default-features = false }
ark-bn254-ext = { git = "https://github.com/zkVerify/accelerated-bn-cryptography.git", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-scale = { features = ["hazmat"], version = "0.0.12", default-features = false }
zksync-era-verifier = { git = "https://github.com/HorizenLabs/zksync-era-verifier.git", tag = "v0.1.0", optional = true }
zksync-era-verifier-deserialize = { git = "https://github.com/HorizenLabs/zksync-era-verifier.git", tag = "v0.1.0", optional = true }
risc0-verifier = { git = "https://github.com/HorizenLabs/risc0-verifier.git", tag = "v0.2.0", optional = true }
ultraplonk_verifier = { git = "https://github.com/HorizenLabs/ultraplonk_verifier.git", tag = "v0.2.0", optional = true }
sp-runtime-interface = { workspace = true }
codec = { workspace = true }
log = "0.4.11"
hp-verifiers = { workspace = true }
hp-groth16 = { workspace = true }

[build-dependencies]
native-cache = { workspace = true, features = ["ultraplonk"] }

[features]
default = ["std"]
std = [
    "ark-bn254/std",
    "ark-bn254-ext/std",
    "ark-ec/parallel",
    "ark-ec/std",
    "ark-ff/std",
    "ark-scale/std",
    "hp-groth16/implementation",
    "sp-runtime-interface/std",
    "codec/std",
    "hp-verifiers/std",
    "hp-groth16/std",
    "dep:zksync-era-verifier",
    "dep:zksync-era-verifier-deserialize",
    "dep:risc0-verifier",
    "dep:ultraplonk_verifier",
]