[package]
name = "nh-runtime"
version = "0.2.0"
description = "New Horizen Mainchain Runtime."
authors.workspace = true
homepage = "https://github.com/HorizenLabs/NH-core"
edition.workspace = true
publish = false
repository.workspace = true
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = [
	"derive",
	"serde",
] }

pallet-offences = { workspace = true, default-features = false }
pallet-im-online = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
pallet-staking = { workspace = true, default-features = false }
pallet-babe = { workspace = true, default-features = false }
pallet-staking-reward-curve = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-try-runtime = { workspace = true, default-features = false, optional = true }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-consensus-babe = { workspace = true, default-features = false, features = [
	"serde",
] }
finality-grandpa = { workspace = true, default-features = false }
sp-consensus-grandpa = { workspace = true, default-features = false, features = [
	"serde",
] }
sp-core = { workspace = true, default-features = false, features = ["serde"] }
sp-inherents = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false, features = [
	"serde",
] }
sp-session = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-storage = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false, features = [
	"serde",
] }
serde_json = { workspace = true, default-features = false, features = [
	"alloc",
] }
sp-genesis-builder = { default-features = false, workspace = true }
sp-weights = { default-features = false, workspace = true }
sp-io = { workspace = true, default-features = false }
log = "0.4.20"

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
frame-election-provider-support = { workspace = true, default-features = false }
pallet-election-provider-support-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-session-benchmarking = { workspace = true, default-features = false, optional = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-system-benchmarking = { workspace = true, default-features = false, optional = true }

# Custom logic
pallet-settlement-fflonk = { default-features = false, workspace = true }
pallet-settlement-zksync = { default-features = false, workspace = true }
pallet-poe = { default-features = false, workspace = true }
static_assertions = "1.1.0"
proof-of-existence-rpc-runtime-api = { default-features = false, workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-settlement-fflonk/runtime-benchmarks",
	"pallet-settlement-zksync/runtime-benchmarks",
	"pallet-poe/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
default = ["std"]
std = [
	"codec/std",
	"finality-grandpa/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"frame-election-provider-support/std",
	"pallet-offences/std",
	"pallet-im-online/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-settlement-fflonk/std",
	"pallet-settlement-zksync/std",
	"pallet-poe/std",
	"proof-of-existence-rpc-runtime-api/std",
	"scale-info/std",
	"serde_json/std",
	"sp-io/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-weights/std",
	"substrate-wasm-builder",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"frame-election-provider-support/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-settlement-fflonk/try-runtime",
	"pallet-settlement-zksync/try-runtime",
	"pallet-poe/try-runtime",
	"sp-runtime/try-runtime",
]
