[package]
name = "zkv-runtime"
version = "0.5.1"
description = "zkVerify Mainchain Runtime."
authors.workspace = true
homepage = "https://github.com/HorizenLabs/zkVerify"
edition.workspace = true
publish = false
repository.workspace = true
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive", "serde"] }

pallet-offences = { workspace = true }
pallet-im-online = { workspace = true }
pallet-authorship = { workspace = true }
pallet-session = { workspace = true }
pallet-staking = { workspace = true }
pallet-babe = { workspace = true }
pallet-bounties = { workspace = true }
pallet-child-bounties = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-balances = { workspace = true }
frame-support = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-multisig = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-preimage = { workspace = true }
pallet-referenda = { workspace = true }
pallet-utility = { workspace = true }
pallet-whitelist = { workspace = true }
pallet-conviction-voting = { workspace = true }
pallet-treasury = { workspace = true }
frame-system = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
frame-executive = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-babe = { workspace = true, features = ["serde"] }
finality-grandpa = { workspace = true }
sp-consensus-grandpa = { workspace = true, features = ["serde"] }
sp-core = { workspace = true, features = ["serde"] }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true, features = ["serde"] }
serde_json = { workspace = true, features = ["alloc"] }
sp-genesis-builder = { workspace = true }
sp-weights = { workspace = true }
sp-io = { workspace = true }
log = "0.4.20"

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { workspace = true }
frame-election-provider-support = { workspace = true }
pallet-election-provider-support-benchmarking = { workspace = true, optional = true }
pallet-session-benchmarking = { workspace = true, optional = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

# Custom logic
pallet-poe = { workspace = true }
static_assertions = "1.1.0"
proof-of-existence-rpc-runtime-api = { workspace = true }

pallet-verifiers = { workspace = true }
hp-verifiers = { workspace = true }
pallet-fflonk-verifier = { workspace = true }
pallet-zksync-verifier = { workspace = true }
pallet-groth16-verifier = { workspace = true }
pallet-risc0-verifier = { workspace = true }
pallet-ultraplonk-verifier = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-whitelist/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-poe/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-verifiers/runtime-benchmarks",
	"pallet-fflonk-verifier/runtime-benchmarks",
	"pallet-zksync-verifier/runtime-benchmarks",
	"pallet-groth16-verifier/runtime-benchmarks",
	"pallet-risc0-verifier/runtime-benchmarks",
	"pallet-ultraplonk-verifier/runtime-benchmarks",
]
default = ["std"]
std = [
	"codec/std",
	"finality-grandpa/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"frame-election-provider-support/std",
	"pallet-offences/std",
	"pallet-im-online/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-bounties/std",
	"pallet-child-bounties/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-multisig/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-referenda/std",
	"pallet-whitelist/std",
	"pallet-conviction-voting/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-verifiers/std",
	"pallet-poe/std",
	"proof-of-existence-rpc-runtime-api/std",
	"scale-info/std",
	"serde_json/std",
	"sp-io/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-weights/std",
	"pallet-verifiers/std",
	"pallet-fflonk-verifier/std",
	"pallet-zksync-verifier/std",
	"pallet-groth16-verifier/std",
	"pallet-risc0-verifier/std",
	"pallet-ultraplonk-verifier/std",
	"hp-verifiers/std",
	"substrate-wasm-builder",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"frame-election-provider-support/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-whitelist/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-verifiers/try-runtime",
	"pallet-poe/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-verifiers/try-runtime",
]
