[package]
name = "zkv-runtime"
version = "0.8.0"
description = "zkVerify Mainchain Runtime."
authors.workspace = true
homepage = "https://github.com/HorizenLabs/zkVerify"
edition.workspace = true
publish = false
repository.workspace = true
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive", "serde"] }

pallet-offences = { workspace = true }
pallet-im-online = { workspace = true }
pallet-authorship = { workspace = true }
pallet-session = { workspace = true }
pallet-staking = { workspace = true }
pallet-babe = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-bounties = { workspace = true }
pallet-child-bounties = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-balances = { workspace = true }
frame-support = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-multisig = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-preimage = { workspace = true }
pallet-referenda = { workspace = true }
pallet-utility = { workspace = true }
pallet-vesting = { workspace = true }
ismp = { workspace = true }
pallet-ismp = { workspace = true, features = [ "unsigned" ]}
pallet-hyperbridge = { workspace = true }
pallet-ismp-runtime-api = { workspace = true }
ismp-grandpa = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
pallet-whitelist = { workspace = true }
pallet-conviction-voting = { workspace = true }
pallet-treasury = { workspace = true }
pallet-proxy = { workspace = true }
frame-system = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
frame-executive = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-babe = { workspace = true, features = ["serde"] }
finality-grandpa = { workspace = true }
sp-consensus-grandpa = { workspace = true, features = ["serde"] }
sp-core = { workspace = true, features = ["serde"] }
sp-inherents = { workspace = true }
sp-mmr-primitives = { workspace = true }
sp-offchain = { workspace = true }
sp-npos-elections = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-storage = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true, features = ["serde"] }
serde_json = { workspace = true, features = ["alloc"] }
sp-genesis-builder = { workspace = true }
sp-weights = { workspace = true }
sp-io = { workspace = true }
log = "0.4.20"

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { workspace = true }
frame-election-provider-support = { workspace = true }
pallet-election-provider-support-benchmarking = { workspace = true, optional = true }
pallet-session-benchmarking = { workspace = true, optional = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

# Custom logic
pallet-aggregate = { workspace = true }
pallet-poe = { workspace = true }
static_assertions = "1.1.0"
proof-of-existence-rpc-runtime-api = { workspace = true }
aggregate-rpc-runtime-api = { workspace = true }

pallet-verifiers = { workspace = true }
hp-verifiers = { workspace = true }
pallet-fflonk-verifier = { workspace = true }
pallet-zksync-verifier = { workspace = true }
pallet-groth16-verifier = { workspace = true }
pallet-risc0-verifier = { workspace = true }
pallet-ultraplonk-verifier = { workspace = true }
pallet-proofofsql-verifier = { workspace = true }

authority-discovery-primitives = { workspace = true, optional = true }

polkadot-primitives = { workspace = true, optional = true }
polkadot-runtime-parachains = { workspace = true, optional = true }
pallet-authority-discovery = { workspace = true, optional = true }

polkadot-runtime-common = { workspace = true, optional = true }

pallet-message-queue = { workspace = true }
pallet-xcm = { workspace = true, optional = true }
pallet-xcm-benchmarks = { workspace = true, optional = true }
xcm-builder = { workspace = true, optional = true }
xcm-executor = { workspace = true, optional = true }
xcm = { workspace = true, optional = true }
hex-literal = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[features]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-whitelist/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-session-benchmarking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-aggregate/runtime-benchmarks",
	"pallet-poe/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-verifiers/runtime-benchmarks",
	"pallet-fflonk-verifier/runtime-benchmarks",
	"pallet-zksync-verifier/runtime-benchmarks",
	"pallet-groth16-verifier/runtime-benchmarks",
	"pallet-risc0-verifier/runtime-benchmarks",
	"pallet-ultraplonk-verifier/runtime-benchmarks",
	"pallet-proofofsql-verifier/runtime-benchmarks",
	"polkadot-primitives?/runtime-benchmarks",
	"polkadot-runtime-parachains?/runtime-benchmarks",
	"polkadot-runtime-common?/runtime-benchmarks",
	"xcm-builder?/runtime-benchmarks",
	"xcm-executor?/runtime-benchmarks",
	"pallet-xcm?/runtime-benchmarks",
	"pallet-xcm-benchmarks?/runtime-benchmarks",
]
fast-runtime = []
relay = [
	"dep:polkadot-primitives",
	"dep:polkadot-runtime-parachains",
	"dep:pallet-authority-discovery",
	"dep:authority-discovery-primitives",
	"dep:polkadot-runtime-common",
	"dep:xcm",
	"dep:xcm-builder",
	"dep:xcm-executor",
	"dep:pallet-xcm",
	"dep:pallet-xcm-benchmarks",
]
default = ["std"]
std = [
    "anyhow/std",
	"codec/std",
	"finality-grandpa/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"frame-election-provider-support/std",
	"pallet-offences/std",
	"pallet-im-online/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-bags-list/std",
	"pallet-bounties/std",
	"pallet-child-bounties/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-multisig/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-referenda/std",
	"pallet-whitelist/std",
	"pallet-conviction-voting/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"pallet-ismp/std",
	"ismp/std",
	"pallet-hyperbridge/std",
	"pallet-ismp-runtime-api/std",
	"ismp-grandpa/std",
	"frame-metadata-hash-extension/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-message-queue/std",
	"pallet-xcm?/std",
	"pallet-xcm-benchmarks?/std",
	"pallet-proxy/std",
	"pallet-verifiers/std",
	"pallet-aggregate/std",
	"pallet-poe/std",
	"proof-of-existence-rpc-runtime-api/std",
	"aggregate-rpc-runtime-api/std",
	"scale-info/std",
	"serde_json/std",
	"sp-io/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-npos-elections/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-weights/std",
	"pallet-verifiers/std",
	"pallet-fflonk-verifier/std",
	"pallet-zksync-verifier/std",
	"pallet-groth16-verifier/std",
	"pallet-risc0-verifier/std",
	"pallet-ultraplonk-verifier/std",
	"pallet-proofofsql-verifier/std",
	"hp-verifiers/std",
	"substrate-wasm-builder",
	"polkadot-primitives?/std",
	"polkadot-runtime-parachains?/std",
	"pallet-authority-discovery?/std",
	"authority-discovery-primitives?/std",
	"polkadot-runtime-common?/std",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"frame-election-provider-support/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-referenda/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-hyperbridge/try-runtime",
	"pallet-ismp/try-runtime",
	"ismp-grandpa/try-runtime",
	"pallet-whitelist/try-runtime",
	"pallet-conviction-voting/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-verifiers/try-runtime",
	"pallet-aggregate/try-runtime",
	"pallet-poe/try-runtime",
	"sp-runtime/try-runtime",
	"pallet-verifiers/try-runtime",
	"polkadot-runtime-parachains?/try-runtime",
	"pallet-authority-discovery?/try-runtime",
	"polkadot-runtime-common?/try-runtime",
	"pallet-xcm?/try-runtime",
]
