[package]
name = "pallet-hyperbridge-aggregations"
version = "0.1.0"
description = "A pallet to dispatch aggregations to other chains"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"

[dependencies]
log = "0.4.20"

codec = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
ismp = { workspace = true }
ismp-grandpa = { workspace = true }
pallet-ismp = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-balances = { workspace = true }
anyhow = { workspace = true, default-features = false }
hex-literal = { workspace = true }
alloy-dyn-abi = { workspace = true }
alloy-primitives = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
rstest = { workspace = true }

[features]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
default = ["std"]
std = [
    "anyhow/std",
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "ismp-grandpa/std",
    "sp-core/std",
    "sp-io/std",
    "alloy-primitives/std",
    "pallet-timestamp/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime", "ismp-grandpa/try-runtime",]
